# cs6378-project1

./: .gitignore  Cargo.toml  README.md  config.toml  local.sh  makefile  utd.sh
cfg/: 2.toml  3.toml  local.toml  utd.toml
docs/: design-doc.md
src/: adj.rs  bus.rs  config.rs  connections.rs  file.rs  file_manifest.rs  logger.rs  main.rs  message.rs  search.rs  session.rs
src/static/: help_text.txt
